part section & address section done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,58 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="banner_container">
+        <div class="banner_div">
+            <p class="banner_para">Happy New Year</p>
+            <h1 class="banner_heading">New Year Party Celebration</h1>
+        </div>
+    </header>
+    <main>
+            <section class="discount_section">
+                <div class="discount_div">
+                    <h1 class="discount_heading">65% OFF</h1>
+                <p class="discount_para">OUR HOLIDAY DEALS ARE BETTER</p>
+                <h4 class="discount_headong_2">ALL CATEGORIES</h4>
+                <div class="discount_image_div">
+                    <img src="./images/New Year Photo.png" alt="" class="discount_image">
+                </div>
+                </div>
+            </section>
+
+            <section class="party">
+                <div class="party_content">
+                    <h1 class="party_heading">Welcome to midnight party</h1>
+                <p class="party_para_1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <h4 class="party_heading_2">Join Now</h4>
+                </div>
+                <div class="party_image_div">
+                    <img src="./images/Group 70.png" alt="" class="party_image">
+                </div>
+            </section>
+            <section class="address">
+                <div class="address_div">
+                   <div class="heading_div">
+                    <h4 class="address_heading">
+                        <span class="address_span">Place :
+                        </span> Park Hotel
+                    </h4>
+                    <h4 class="address_heading">
+                        <span class="address_span">Date :
+                        </span> 31 December Night 2023
+
+                    </h4>
+                    <h4 class="address_heading">
+                        <span class="address_span">Time :
+                        </span>Evening 7.30 pm to 12.30 am
+                    </h4>
+                    
+                   </div>
+                    <button class="address_btn">JOIN NOW</button>
+                </div>
+            </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
