offer section done

--- a/index.html
+++ b/index.html
@@ -57,6 +57,30 @@
                     <button class="address_btn">JOIN NOW</button>
                 </div>
             </section>
+
+            <section class="best_offer">
+               
+                <div class="offer_content">
+                    <p class="offer_content_para">NEW BEST OFFER</p>
+                    <h2 class="offer_content_heading">Coming Soon</h2>
+                    <p class="offer_content_para_2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+
+                <div class="offer_image_div">
+                    <img class="image_first" src="/images/Ellipse 1.png" alt="">
+                </div>
+
+                <div class="offer_year">
+                       <h2 class="offer_year_heading">2024</h2>
+                      
+                       <p class="offer_year_para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+
+                       <div class="offer_year_img_div">
+                        <img src="/images/Group 96.png" alt="" class="offer_year_img">
+                    </div>
+                </div>
+
+            </section>
     </main>
     <footer>
 
