--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
                 </div>
 
             </section>
+
+            <section class="holidays">
+               <div class="holiday_div">
+                <p class="holiday_para">WHAT IS FUNCTIONAL</p>
+                <h1 class="holiday_heading">Holidays Sale 50%</h1>
+                <p class="holiday_para_2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+               </div>
+            </section>
+
+            <section class="discount">
+                <div class="image_one_div">
+                    <img src="'./images/Group 75.png" alt="" class="gift_img">
+                </div>
+                <div class="image_two_div">
+                    <img src="./images/Group 44.png" alt="" class="discount_img">
+                </div>
+            </section>
+
+
     </main>
     <footer>
 
