discount section done

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <section class="discount">
                 <div class="image_one_div">
-                    <img src="'./images/Group 75.png" alt="" class="gift_img">
+                    <img src="./images/Group 75.png" alt="" class="gift_img">
                 </div>
                 <div class="image_two_div">
                     <img src="./images/Group 44.png" alt="" class="discount_img">
