subscribe section done

--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@
                 </div>
             </section>
 
+            <section class="subscribe">
+                <div class="port_img_div">
+                    <img src="./images/Group 61.png" alt="">
+                </div>
+                <h2>Subscribe Newsletter</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+                <div class="input_div">
+                    <input type="text">
+                    <button>Subscribe</button></div>
+            </section>
+
 
     </main>
     <footer>
