--- a/index.html
+++ b/index.html
@@ -137,8 +137,39 @@
 
 
     </main>
-    <footer>
+<footer>
+    <div class="footer_top">
+        <div class="footer_address">
+            <p>44, Big Building Roosevelt Street
+                Beach Gardens Florida 33410</p>
+        </div>
+        <div class="footer_contact">
+            <ul>
+                <li>
+                    <img src="./icons/Call.png" alt="">
+                    <p>+00 123 584 124</p>
+                </li>
+                <li>
+                    <img src="./icons/Website.png" alt="">
+                    <p>www.website.com</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+<div class="icons">
+    <ul>
+        <li><img src="./icons/Facebook.png" alt=""></li>
+        <li><img src="./icons/Instagram.png" alt=""></li>
+        <li><img src="./icons/Twitter.png" alt=""></li>
+        <li><img src="./icons/Linkedin.png" alt=""></li>
+    </ul>
+</div>
 
-    </footer>
+ <div class="footer_para">
+<p>2017, All Rights Reserved.</p>
+<p>Unsubscribe</p>
+ </div>
+
+</footer>
 </body>
 </html>
