image name changed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="offer_image_div">
-                    <img class="image_first" src="/images/Ellipse 1.png" alt="">
+                    <img class="image_first" src="/images/ellipse.png" alt="">
                 </div>
 
                 <div class="offer_year">
